@@ -1,3 +1,4 @@
+Build a Fraction: Pictures: Fixed: Split button should change cursor back to arrow after clicking.
 Build a Fraction: Pictures: Fixed: Container shouldn't be draggable once in scoring cell.
 # 0.00.91 (65322) Jun 19, 2012
 Build a Fraction: Pictures: Containers animate back to the toolbox
